env file and minor changes

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Travel World",
+  "name": "Travel World: it's time to travel the world",
   "icons": [
     {
       "src": "favicon.ico",
